feat: Add empty state UI for community reports and remove logging from authentication datasource methods.

--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -434,5 +434,8 @@
   "profileThemeMode": "Tema",
   "profileThemeModeSystem": "Sistema",
   "profileThemeModeLight": "Chiaro",
-  "profileThemeModeDark": "Scuro"
+  "profileThemeModeDark": "Scuro",
+  "repeaterDetailBeFirstFeedback": "Sii il primo a lasciare un feedback su questo ripetitore!",
+  "repeaterDetailDistanceFromYou": "Distanza da te",
+  "repeaterDetailNever": "Mai"
 }
